feat: add Alba and Verify testing extensions
