# TodoApi.Tests/Todos/ApiContractTests.Verify_OpenApi_spec.verified.json
@@ -5,29 +5,6 @@
     "version": "1.0"
   },
   "paths": {
-    "/todos/complete": {
-      "get": {
-        "tags": [
-          "todo"
-        ],
-        "operationId": "getAllCompleted",
-        "responses": {
-          "200": {
-            "description": "Success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/TodoDTO"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/todos": {
       "get": {
         "tags": [
@@ -82,6 +59,29 @@
               "application/problem\u002Bjson": {
                 "schema": {
                   "$ref": "#/components/schemas/HttpValidationProblemDetails"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/todos/complete": {
+      "get": {
+        "tags": [
+          "todo"
+        ],
+        "operationId": "getAllCompleted",
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/TodoDTO"
+                  }
                 }
               }
             }
